src/objects/pse__Billing_Event__c.object
<CustomObject>
    <customHelpPage>pse__BillingEventHelp</customHelpPage>
    <description>Contains billing event items prior to invoicing. Billings events, once released, often correspond with invoices in your financials system, with billing event items serving as invoice line items. Invoicing always occurs at the billing event level.</description>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Events (Billing Contact)</relationshipLabel>
        <relationshipName>Billing_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Batch</label>
        <referenceTo>pse__Billing_Event_Batch__c</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Remaining__c</fullName>
        <formula>pse__Project__r.pse__Bookings__c -  pse__Summary_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Event_Key__c</fullName>
        <description>Generated key to identify a Billing Event. Contains concatenation of Billing_Event_Batch__c, Project__c, and an optional two-character suffix based on the type of business records it contains (if the records are configured to be in separate billing events).</description>
        <externalId>true</externalId>
        <label>Event Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this billing event been invoiced?</description>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rounded_Summary_Amount__c</fullName>
        <label>Rounded Summary Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Skip_Sync_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, do not check for out-of-sync billing event items on update of the Is_Released__c field. This should only be used by code, never shown to users.</description>
        <label>Skip Sync Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Summary_Amount__c</fullName>
        <label>Summary Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Event</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Billing_Event_Batch__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Date__c</columns>
        <columns>pse__Summary_Amount__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Invoiced__c</columns>
        <columns>pse__Invoice_Date__c</columns>
        <columns>pse__Invoice_Number__c</columns>
        <columns>pse__Is_Released__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Invoiced</fullName>
        <active>true</active>
        <description>Invoice Number or Date is not allowed on record unless it is invoiced</description>
        <errorConditionFormula>(pse__Invoice_Number__c != null ||
pse__Invoice_Date__c != null) &amp;&amp; pse__Invoiced__c = false</errorConditionFormula>
        <errorMessage>Invoice Number or Date is not allowed on record unless it is invoiced</errorMessage>
    </validationRules>
</CustomObject>